<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/TextFieldShadow"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="157dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imgDescription"
            app:srcCompat="@drawable/qr_code" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        style="@style/TextFieldShadow"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:shadowColor="#94000000"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/createGame"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="46sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/connectToTheServer"
        android:textAlignment="center"
        android:textColor="#013F7B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/ipAddressView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ipAddressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_field"
        android:fontFamily="@font/roboto"
        android:hint="@string/ipAddress"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/portNumberView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/portNumberView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/text_field"
        android:fontFamily="@font/roboto"
        android:hint="@string/portNumber"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/chooseGameMode"
        android:textAlignment="center"
        android:textColor="#013F7B"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/gameModeView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/gameModeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/spinner"
        android:dropDownWidth="match_parent"
        android:entries="@array/gameTypes"
        android:fontFamily="@font/roboto"
        android:hint="@string/gameCode"
        android:paddingStart="10dp"
        android:paddingTop="15dp"
        android:paddingEnd="10dp"
        android:paddingBottom="15dp"
        android:popupBackground="@drawable/text_field"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/createGameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/createGameBtn"
        style="@style/TextFieldShadow"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/roboto"
        android:text="@string/createGameButton"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>