<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/TextFieldShadow"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@android:color/background_light"
        app:cardCornerRadius="35dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="157dp"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:contentDescription="@string/qrCodeGames"
            app:srcCompat="@drawable/qr_code" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        style="@style/TextFieldShadow"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:shadowColor="#94000000"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/qrCodeGames"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/openQRScanBtn"
        android:layout_width="110dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:elevation="6dp"
        android:translationZ="60dp"
        app:cornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">
    </Button>

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/cameraImg"
        android:src="@drawable/camera"
        android:translationZ="70dp"
        app:layout_constraintBottom_toBottomOf="@+id/openQRScanBtn"
        app:layout_constraintEnd_toEndOf="@+id/openQRScanBtn"
        app:layout_constraintStart_toStartOf="@+id/openQRScanBtn"
        app:layout_constraintTop_toTopOf="@+id/openQRScanBtn" />

    <TextView
        android:id="@+id/view"
        android:layout_width="364dp"
        android:layout_height="151dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/main_view"
        android:fontFamily="@font/roboto_medium"
        android:maxLines="1"
        android:paddingTop="25dp"
        android:text="@string/startText"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp"
        android:elevation="6dp"
        android:translationZ="-5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />







</androidx.constraintlayout.widget.ConstraintLayout>